# atomic_habit

./: .env.docker.sample  .env.sample  README.md  backup.sql  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits_app/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits_app/migrations/: 0001_initial.py  0002_alter_habit_time_required.py  0003_remove_habit_pleasant_habit_habit_is_pleasant.py  0004_alter_habit_time_required.py  0005_alter_habit_period.py
users_app/: models.py  serializers.py  urls.py  views.py
users_app/management/commands/: create_su.py
users_app/migrations/: 0001_initial.py  0002_user_telegram_user_tg_id.py
