[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["TagRomEdu <qwertystyles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.18.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^23.5"
drf-yasg = "^1.21.7"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
